--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>pom</packaging>
 	<distributionManagement>
 		<repository>
-			<id>repo</id>
+			<id>jondwillis-repo</id>
 			<url>https://raw.github.com/jondwillis/jondwillis-maven-artifacts/master/releases/</url>
 		</repository>
 	</distributionManagement>
