--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<distributionManagement>
 		<repository>
 			<id>jondwillis-repo</id>
-			<url>https://raw.github.com/jondwillis/jondwillis-maven-artifacts/master/releases/</url>
+			<url>https://github.com/jondwillis/jondwillis-maven-artifacts/raw/master/releases/</url>
 		</repository>
 	</distributionManagement>
 </project>
